core-services/Harbor/harbor-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: services
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: harbor.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
